# codecrafters-redis

./: .gitignore  Makefile  README.md  dump.rdb  pyproject.toml
app/: client.py  config.py  main.py  resp.py  server.py
tests/: test_resp.py  test_server.py
